# multi-rpc

./: .env.production.example  .gcloudignore  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  VERCEL_DEPLOYMENT.md  VERCEL_FIX_404.md  VERCEL_SETUP.md  alert_rules.yml  cloudbuild.yaml  config.toml  config.toml.bak  deploy.sh  docker-compose.yml  docker-entrypoint.sh  haproxy.cfg  nginx.conf  package.json  prometheus.yml  service.yaml  test-docker-local.sh  test_startup.sh  vercel.json
src/: admin.rs  auth.rs  bulkhead.rs  cache.rs  config.rs  consensus.rs  endpoints.rs  error.rs  geo.rs  health.rs  logging.rs  main.rs  metrics.rs  monitoring.rs  rate_limit.rs  retry.rs  router.rs  rpc.rs  types.rs  websocket.rs
templates/: config.html  dashboard.html  endpoints.html  logs.html
tests/: integration_test.rs
web-ui/: .env  .env.example  .env.production  .eslintrc.json  .gitignore  DEPLOYMENT.md  Dockerfile  PRODUCTION_CHECKLIST.md  README.md  SETUP.md  next.config.js  package.json  tailwind.config.js  tsconfig.json  vercel.json
web-ui/prisma/: schema.prisma
web-ui/prisma/migrations/20240108_add_performance_indexes/: migration.sql
web-ui/public/: offline.html
web-ui/src/: middleware.ts
web-ui/src/app/: client-layout.tsx  globals.css  layout.tsx  page.tsx
web-ui/src/app/auth/: page.tsx
web-ui/src/app/dashboard/: comprehensive-dashboard.tsx  dashboard-client.tsx  enhanced-dashboard.tsx  layout-optimized.tsx  layout.tsx  optimized-dashboard.tsx  page.tsx  real-dashboard.tsx
web-ui/src/components/: APIKeys.tsx  Billing.tsx  Dashboard.tsx  Metrics.tsx  Profile.tsx  RPCManagement.tsx  Sidebar.tsx  client-date.tsx  endpoint-config.tsx  error-boundary.tsx  loading-skeleton.tsx  modal.tsx  optimized-image.tsx  performance-monitor.tsx  rpc-debugger.tsx  virtualized-list.tsx
web-ui/src/hooks/: use-auth.ts  use-performance.ts  use-prefetch.ts  use-websocket.ts
web-ui/src/lib/: api-cache.ts  api-key.ts  date-utils.ts  env-validation.ts  prisma.ts  rate-limiter.ts  register-sw.ts  request-batcher.ts  rpc-client.ts
web-ui/src/providers/: privy-provider.tsx  theme-provider.tsx  websocket-provider.tsx
(+34 files in other folders)
