[package]
name = "multi-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "auth"] }

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "gzip"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
futures = "0.3"
tokio-stream = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-opentelemetry = "0.21"
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
config = "0.14"
toml = "0.8"

# Metrics
prometheus = "0.13"

# Caching
redis = { version = "0.23", default-features = false, features = ["tokio-comp", "connection-manager"] }

# Authentication
jsonwebtoken = "8.3"
sha2 = "0.10"
base64 = "0.21"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Geographic
# geoip2 = "0.1" # Removed - using maxminddb directly
maxminddb = "0.24"

# Database
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Security
# argon2 = "0.4" # Temporarily removed due to edition2024 requirement
rand = "0.8"

# HTTP headers
headers = "0.3"

# Consensus and validation
dashmap = "5.5"
parking_lot = "0.12"

# Network utilities
ipnet = "2.9"

# Configuration hot reload
notify = "5.2"

# Admin dashboard
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

[dev-dependencies]
tokio-test = "0.4"